--- a/theater.html
+++ b/theater.html
@@ -8,23 +8,50 @@
         <header>
             <h1>Dinesh Bali does Checkov tonight</h1>
         </header>
-        <h3> Uncle Vanya - Anton Chekov </h3>
-        <p>HELENA. [Looking at him intently] Ivan, you are drunk!</p>
+    <h3> Uncle Vanya - Anton Chekov </h3>
 
-        <p>VOITSKI. Perhaps. Perhaps.</p>
+<h5>VOITSKI</h5>
+<p>Soon the rain will be over, and all nature will sigh and awake
+refreshed.This wonderful feeling of mine will be wasted
+and lost as a ray of sunlight is lost that falls into a dark chasm, and
+my life will go with it.</p>
 
-        <p>HELENA. Where is the doctor?</p>
+<h5>HELENA</h5>
+<p>I am as it were benumbed when you speak to me of your love, and I don't know how to answer you. Forgive me, I have nothing to say to you.</p>
+<p>[She tries to go out]</p> 
+<p>Good-night!</p>
 
-        <p>VOITSKI. In there, spending the night with me. Perhaps I am drunk,
-        perhaps I am; nothing is impossible.</p>
+<h5>VOITSKI</h5>
+<p>[Barring the way]</p> 
+<p>If you only knew how I am tortured by the
+thought that beside me in this house is another life that is being lost
+forever--it is yours! What are you waiting for? What accursed philosophy
+stands in your way? Oh, understand, understand----</p>
 
-       <p> HELENA. Have you just been drinking together? Why do you do that?</p>
+<h5>HELENA</h5>
+<p>[Looking at him intently]</p> 
+<p>Ivan, you are drunk!</p>
 
-       <p> VOITSKI. Because in that way I get a taste of life. Let me do it,
-        Helena!</p>
+<h5>VOITSKI</h5>
+<p>Perhaps. Perhaps.</p>
 
-       <p> HELENA. You never used to drink, and you never used to talk so much. Go
-        to bed, I am tired of you.</p>
+<h5>HELENA</h5>
+<p>Where is the doctor?</p>
+
+<h5>VOITSKI</h5>
+<p>In there, spending the night with me. Perhaps I am drunk,
+perhaps I am; nothing is impossible.</p>
+
+<h5>HELENA</h5>
+<p>Have you just been drinking together? Why do you do that?</p>
+
+<h5>VOITSKI</h5>
+<p>Because in that way I get a taste of life. Let me do it,
+Helena!</p>
+
+<h5>HELENA</h5>
+<p>You never used to drink, and you never used to talk so much. Go
+to bed, I am tired of you.</p>
 
     </body>
 </html>
