--- a/theater.html
+++ b/theater.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>MyAssignment04</title>
+<link rel="stylesheet" type="text/css" href="chekov.css"/>
     </head>
     <body>
         <header>
@@ -10,48 +11,77 @@
         </header>
     <h3> Uncle Vanya - Anton Chekov </h3>
 
-<h5>VOITSKI</h5>
-<p>Soon the rain will be over, and all nature will sigh and awake
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">Soon the rain will be over, and all nature will sigh and awake
 refreshed.This wonderful feeling of mine will be wasted
 and lost as a ray of sunlight is lost that falls into a dark chasm, and
 my life will go with it.</p>
+<p class="direction">[beingsad and looking at sky]</p>
 
-<h5>HELENA</h5>
-<p>I am as it were benumbed when you speak to me of your love, and I don't know how to answer you. Forgive me, I have nothing to say to you.</p>
-<p>[She tries to go out]</p> 
-<p>Good-night!</p>
+<h5 class="HELENA"></h5>
+<p class="speech">I am as it were benumbed when you speak to me of your love, and I don't know how to answer you. Forgive me, I have nothing to say to you.</p>
+<p class="direction">[She tries to go out]</p> 
+<p class="speech">Good-night!</p>
 
-<h5>VOITSKI</h5>
-<p>[Barring the way]</p> 
-<p>If you only knew how I am tortured by the
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="direction">[Barring the way]</p> 
+<p class="speech">If you only knew how I am tortured by the
 thought that beside me in this house is another life that is being lost
 forever--it is yours! What are you waiting for? What accursed philosophy
 stands in your way? Oh, understand, understand----</p>
 
-<h5>HELENA</h5>
-<p>[Looking at him intently]</p> 
-<p>Ivan, you are drunk!</p>
+<h5 class="HELENA"></h5>
+<p class="direction">[Looking at him intently]</p> 
+<p class="speech">Ivan, you are drunk!</p>
 
-<h5>VOITSKI</h5>
-<p>Perhaps. Perhaps.</p>
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">Perhaps. Perhaps.</p>
 
-<h5>HELENA</h5>
-<p>Where is the doctor?</p>
+<h5 class="HELENA"></h5>
+<p class="speech">Where is the doctor?</p>
 
-<h5>VOITSKI</h5>
-<p>In there, spending the night with me. Perhaps I am drunk,
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">In there, spending the night with me. Perhaps I am drunk,
 perhaps I am; nothing is impossible.</p>
 
-<h5>HELENA</h5>
-<p>Have you just been drinking together? Why do you do that?</p>
+<h5 class="HELENA"></h5>
+<p class="speech">Have you just been drinking together? Why do you do that?</p>
 
-<h5>VOITSKI</h5>
-<p>Because in that way I get a taste of life. Let me do it,
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">Because in that way I get a taste of life. Let me do it,
 Helena!</p>
 
-<h5>HELENA</h5>
-<p>You never used to drink, and you never used to talk so much. Go
+<h5 class="HELENA"></h5>
+<p class="speech">You never used to drink, and you never used to talk so much. Go
 to bed, I am tired of you.</p>
 
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">He is really ill.</p>
+
+<h5 class="ASTROFF"></h5>
+<p class="speech">What is the matter with you to-night? You seem sad. Is it
+because you are sorry for the professor?</p>
+
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">Leave me alone.</p>
+
+<h5 class="ASTROFF"></h5>
+<p class="speech">Or in love with the professor's wife?</p>
+
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">She is my friend.</p>
+
+<h5 class="ASTROFF"></h5>
+<p class="speech">Already?</p>
+
+<h5 class="VOITSKI">VOITSKI</h5>
+<p class="speech">What do you mean by "already"?</p>
+
+<h5 class="ASTROFF"></h5>
+<p class="speech">A woman can only become a man's friend after having first been
+his acquaintance and then his beloved--then she becomes his friend.</p>
+
+<h5 class="ASTROFF"></h5>
+<p class="speech">Play!</p>
     </body>
 </html>
