added table to the theater.html and modified css

--- a/theater.html
+++ b/theater.html
@@ -83,5 +83,27 @@ his acquaintance and then his beloved--then she becomes his friend.</p>
 
 <h5 class="ASTROFF"></h5>
 <p class="speech">Play!</p>
+<table border = "2">
+    <tr class="table_header_col">
+        <th>Character</th>
+        <th>Actor</th>
+        <th>Understudy</th>
+    </tr>
+    <tr>
+        <th>VOITSKI</th>
+        <th>Ed Sheeran</th>
+        <th>Harry Styles</th>
+    </tr>
+    <tr>
+        <th>HELENA</th>
+        <th>Zayn</th>
+        <th>tom</th>
+    </tr>
+    <tr>
+        <th>HELENA</th>
+        <th>Adele</th>
+        <th>Dua Lipa</th>
+    </tr>
+</table>
     </body>
 </html>
