modified all files

--- a/theater.html
+++ b/theater.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>MyAssignment04</title>
-<link rel="stylesheet" type="text/css" href="chekov.css"/>
     </head>
+    <link rel="stylesheet" type="text/css" href="chekov.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <body>
         <header>
             <h1>Dinesh Bali does Checkov tonight</h1>
@@ -83,6 +84,7 @@ his acquaintance and then his beloved--then she becomes his friend.</p>
 
 <h5 class="ASTROFF"></h5>
 <p class="speech">Play!</p>
+
 <table border = "2">
     <tr class="table_header_col">
         <th>Character</th>
@@ -90,12 +92,12 @@ his acquaintance and then his beloved--then she becomes his friend.</p>
         <th>Understudy</th>
     </tr>
     <tr>
-        <th>VOITSKI</th>
+        <th>ASTROFF</th>
         <th>Ed Sheeran</th>
         <th>Harry Styles</th>
     </tr>
     <tr>
-        <th>HELENA</th>
+        <th>VOITSKI</th>
         <th>Zayn</th>
         <th>tom</th>
     </tr>
@@ -105,5 +107,21 @@ his acquaintance and then his beloved--then she becomes his friend.</p>
         <th>Dua Lipa</th>
     </tr>
 </table>
+<hr> 
+<img src="IMAGE.jpg" alt="TigerImage" width="300" height="300">
+<br>
+<p><i class="fas fa-feather-alt" style="font-size:30px;"></i>
+    <i class="far fa-smile" style="font-size:30px;"></i>
+    <i class="fas fa-paw" style="font-size:30px;"></i>
+    <i class="fas fa-dog" style="font-size:30px;"></i></p>
+<hr>
+    <a href="winter.html">LINK: Winter html </a>
+<hr>
+<ul class="navbar-horizontal">
+    <a href="theater.html">Theater</a>
+    <a href="winter.html">Winter</a>
+</ul>
+
+
     </body>
 </html>
