modified all the html files

--- a/winter.html
+++ b/winter.html
@@ -58,7 +58,8 @@ at your age.</p>
 are busy creating illusions! You have given up the farm altogether.
 I have done all the work alone until I am at the end of my
 strength--</p>
-<p class="direction">[Frightened] Uncle! Your eyes are full of tears!</p>
+<p class="direction">[Frightened]</p>
+<p class="speech">Your eyes are full of tears!</p>
 
 <h5 class="VOITSKI">VOITSKI</h5>
 <p class="speech">Tears? Nonsense, there are no tears in my eyes. You looked at me then just as your dead mother used to, my darling-- </p>
